[gd_scene load_steps=16 format=2]

[ext_resource path="res://Global/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Global/Pause.gd" type="Script" id=2]
[ext_resource path="res://Menus/MenuTheme.tres" type="Theme" id=3]
[ext_resource path="res://CRT.gdshader" type="Shader" id=4]
[ext_resource path="res://Global/Filter.gd" type="Script" id=5]
[ext_resource path="res://default_env.tres" type="Environment" id=6]
[ext_resource path="res://Global/PlayerData.gd" type="Script" id=7]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.528067 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=4]
gradient = SubResource( 3 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/overlay = true
shader_param/scanlines_opacity = 0.212
shader_param/scanlines_width = 0.0
shader_param/grille_opacity = 0.378
shader_param/resolution = Vector2( 640, 360 )
shader_param/pixelate = false
shader_param/roll = false
shader_param/roll_speed = 10.0
shader_param/roll_size = 74.242
shader_param/roll_variation = 0.1
shader_param/distort_intensity = 0.001
shader_param/noise_opacity = 0.0
shader_param/noise_speed = 5.0
shader_param/static_noise_intensity = 0.019
shader_param/aberration = 0.005
shader_param/brightness = 1.746
shader_param/discolor = false
shader_param/warp_amount = 0.0
shader_param/clip_warp = false
shader_param/vignette_intensity = -0.466
shader_param/vignette_opacity = 0.288

[sub_resource type="Animation" id=9]
resource_name = "FadeIn"
length = 1.2
tracks/0/type = "bezier"
tracks/0/path = NodePath("ViewportContainer/Control/ColorRect:material:shader_param/position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("ViewportContainer/Control/ColorRect:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "FadeOut"
length = 1.2
tracks/0/type = "bezier"
tracks/0/path = NodePath("ViewportContainer/Control/ColorRect:material:shader_param/position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, -1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("ViewportContainer/Control/ColorRect:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Control/ColorRect:material:shader_param/position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Control/ColorRect:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Control/ColorRect:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ViewportContainer/Control/ColorRect:material:shader_param/position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("ViewportContainer/Control/ColorRect:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform vec4 in_color:hint_color;
uniform vec4 out_color:hint_color;

uniform float in_out:hint_range(0.,1.)=0.;

uniform float position:hint_range(-1.5,1.) = 0.856;
uniform vec2 size = vec2(16., 16.);

void fragment(){
    vec2 a = (1./SCREEN_PIXEL_SIZE) / size;
    
    vec2 uv=UV;
    uv *= a;
    
    vec2 i_uv = floor(uv);
    vec2 f_uv = fract(uv);
    
    float wave = max(0.,i_uv.x/(a.x) - position);
    
    vec2 center = f_uv*2.-1.;
    float circle = length(center);
    circle = 1. - step(wave,circle);
    
    vec4 color = mix(in_color, out_color, step(0.5, in_out));
    
    COLOR=vec4(circle) * color;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/in_color = Color( 1, 0, 0, 0 )
shader_param/out_color = Color( 0.286275, 0, 1, 1 )
shader_param/in_out = 1.0
shader_param/position = 0.0
shader_param/size = Vector2( 75, 24 )

[node name="GameManager" type="Node2D"]
script = ExtResource( 1 )
transition_speed = 1.5

[node name="PauseMenu" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 5
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="PauseMenu"]
modulate = Color( 1, 1, 1, 0.788235 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 4 )
expand = true

[node name="MenuOptions" type="VBoxContainer" parent="PauseMenu"]
margin_left = 20.0
margin_top = 20.0
margin_right = 148.0
margin_bottom = 140.0
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="PauseMenu/MenuOptions"]
margin_right = 128.0
margin_bottom = 16.0
text = "PAUSED"

[node name="Resume" type="Button" parent="PauseMenu/MenuOptions"]
margin_top = 28.0
margin_right = 128.0
margin_bottom = 58.0
theme = ExtResource( 3 )
text = "RESUME"
align = 0

[node name="Quit" type="Button" parent="PauseMenu/MenuOptions"]
margin_top = 70.0
margin_right = 128.0
margin_bottom = 100.0
theme = ExtResource( 3 )
text = "GOTO SCENE"
align = 0

[node name="FilterButton" type="CheckBox" parent="PauseMenu/MenuOptions"]
margin_top = 112.0
margin_right = 128.0
margin_bottom = 150.0
theme = ExtResource( 3 )
pressed = true
text = "TOGGLE FILTER"
flat = true

[node name="Panel" type="Panel" parent="PauseMenu/MenuOptions"]
margin_top = 162.0
margin_right = 128.0
margin_bottom = 162.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MenuOptions/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="Music" type="Label" parent="PauseMenu/MenuOptions/Panel/VBoxContainer"]
margin_right = 128.0
margin_bottom = 16.0
text = "MUSIC:"

[node name="HSlider" type="HSlider" parent="PauseMenu/MenuOptions/Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 128.0
margin_bottom = 36.0

[node name="SFX" type="Label" parent="PauseMenu/MenuOptions/Panel/VBoxContainer"]
margin_top = 48.0
margin_right = 128.0
margin_bottom = 64.0
text = "SFX:"

[node name="HSlider2" type="HSlider" parent="PauseMenu/MenuOptions/Panel/VBoxContainer"]
margin_top = 76.0
margin_right = 128.0
margin_bottom = 84.0

[node name="Filter" type="CanvasLayer" parent="."]
layer = 5
scale = Vector2( 5, 5 )
transform = Transform2D( 5, 0, 0, 5, 0, 0 )
follow_viewport_scale = 0.001
script = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="Filter"]
environment = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Filter"]
material = SubResource( 2 )
margin_right = 128.0
margin_bottom = 72.0
rect_clip_content = true
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="SceneTransition" type="CanvasLayer" parent="."]
visible = false

[node name="ViewportContainer" type="ViewportContainer" parent="SceneTransition"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Control" type="Control" parent="SceneTransition/ViewportContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 620.0
margin_bottom = 340.0
rect_min_size = Vector2( 640, 360 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="SceneTransition/ViewportContainer/Control"]
root_node = NodePath("../../..")
anims/FadeIn = SubResource( 9 )
anims/FadeOut = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="ColorRect" type="ColorRect" parent="SceneTransition/ViewportContainer/Control"]
material = SubResource( 6 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -320.0
margin_right = 180.0
margin_bottom = 320.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 180, 320 )
rect_clip_content = true
mouse_filter = 2

[node name="PlayerData" type="Node" parent="."]
script = ExtResource( 7 )

[connection signal="pressed" from="PauseMenu/MenuOptions/Resume" to="PauseMenu" method="_on_Resume_pressed"]
[connection signal="toggled" from="PauseMenu/MenuOptions/FilterButton" to="Filter" method="_on_FilterButton_toggled"]
